Fix message length

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ You then can check if cookies are allowed :</p>
 </tr>
 <tr>
 <td><code>message</code></td>
-<td>'This website uses cookies so that we can provide you the best user experience possible.By continuing to browse the site you are agreeing to our use of cookies.'</td>
+<td>'This website...'</td>
 <td>Message displayed</td>
 </tr>
 </tbody>
