Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -141,7 +141,11 @@ You then can check if cookies are allowed :</p>
 #cookiesplease button {}
 #cookiesplease-accept {}
 #cookiesplease-decline {}
+#cookiesplease-hidden {}
+body.cookiesplease-shown {}
 </code></pre>
+
+<p>Please note that the <code>.cookiesplease-shown</code> is added to the <code>&lt;body&gt;</code> element, until the user click on any button. This allows you to customize external elements, for pushing down the body for example.</p>
 
 <h2>
 <a name="legals" class="anchor" href="#legals"><span class="octicon octicon-link"></span></a>Legals</h2>
@@ -152,7 +156,7 @@ You then can check if cookies are allowed :</p>
 <li>Licence : <a href="http://opensource.org/licenses/MIT">MIT</a> </li>
 <li>Contact : <a href="https://twitter.com/zessx">@zessx</a>
 </li>
-<li>Link  : <a href="http://smarchal.com/cookiesplease">http://cookiesplease.smarchal.com</a>
+<li>Link  : <a href="http://smarchal.com/cookiesplease">http://smarchal.com/cookiesplease</a>
 </li>
 </ul><h2>
 <a name="donations" class="anchor" href="#donations"><span class="octicon octicon-link"></span></a>Donations</h2>
