Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 It'll allow you to add a message asking the user is he accepts or not cookies' storage for your website.</p>
 
 <h2>
+<a name="an-example-" class="anchor" href="#an-example-"><span class="octicon octicon-link"></span></a>An example ?</h2>
+
+<p>You can see a working example on the author's website : <a href="http://smarchal.com">smarchal.com</a>.<br>
+This implementation uses default options of CookiesPlease.</p>
+
+<h2>
 <a name="how-to-use-it-" class="anchor" href="#how-to-use-it-"><span class="octicon octicon-link"></span></a>How to use it ?</h2>
 
 <p>You just have to remember two things :</p>
