Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@ You then can check if cookies are allowed :</p>
 #cookiesplease p {}
 #cookiesplease a {}
 #cookiesplease button {}
-#cookiesplease-accept {}
-#cookiesplease-decline {}
-#cookiesplease-hidden {}
+#cookiesplease .cookiesplease-accept {}
+#cookiesplease .cookiesplease-decline {}
+#cookiesplease.cookiesplease-hidden {}
 body.cookiesplease-shown {}
 </code></pre>
 
