Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
+        <p><img src="cookiesplease.png" alt="cookiesplease"></p>
+
+<h1>
 <a name="cookiesplease" class="anchor" href="#cookiesplease"><span class="octicon octicon-link"></span></a>CookiesPlease</h1>
 
 <p>Little script to quickly comply with EU cookie law.<br>
@@ -106,6 +108,12 @@ You then can check if cookies are allowed :</p>
 <td><code>storeChoiceOnDecline</code></td>
 <td>true</td>
 <td>Remember user's decline (...storing a cookie!!)</td>
+</tr>
+<tr>
+<td><code>prependToBody</code></td>
+<td>false</td>
+<td>If you prefer to add the div at the beginning of <code>&lt;body&gt;</code>
+</td>
 </tr>
 <tr>
 <td><code>buttonAcceptText</code></td>
