Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p><img src="cookiesplease.png" alt="cookiesplease"></p>
+        <p><img src="https://raw.githubusercontent.com/zessx/cookiesplease/master/cookiesplease.png" alt="cookiesplease"></p>
 
 <h1>
 <a name="cookiesplease" class="anchor" href="#cookiesplease"><span class="octicon octicon-link"></span></a>CookiesPlease</h1>
