Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Cookiesplease by zessx</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
@@ -22,25 +22,25 @@
       <p><img src="https://raw.githubusercontent.com/zessx/cookiesplease/master/cookiesplease.png" alt="cookiesplease"></p>
 
 <h1>
-<a id="cookiesplease" class="anchor" href="#cookiesplease" aria-hidden="true"><span class="octicon octicon-link"></span></a>CookiesPlease</h1>
+<a id="cookiespleasejs" class="anchor" href="#cookiespleasejs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CookiesPleaseJS</h1>
 
 <p>Little script to quickly comply with EU cookie law.<br>
 It'll allow you to add a message asking the user is he accepts or not cookies' storage for your website.</p>
 
 <h2>
-<a id="an-example-" class="anchor" href="#an-example-" aria-hidden="true"><span class="octicon octicon-link"></span></a>An example ?</h2>
+<a id="an-example-" class="anchor" href="#an-example-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>An example ?</h2>
 
 <p>You can see a working example on the author's website : <a href="http://smarchal.com">smarchal.com</a>.<br>
-This implementation uses default options of CookiesPlease.</p>
+This implementation uses default options of CookiesPleaseJS.</p>
 
 <h2>
-<a id="how-to-use-it-" class="anchor" href="#how-to-use-it-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use it ?</h2>
+<a id="how-to-use-it-" class="anchor" href="#how-to-use-it-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to use it ?</h2>
 
 <p>You just have to remember two things :</p>
 
 <ul>
-<li>CookiesPlease needs to be initialized <strong>AFTER the DOM is ready</strong> (you can easily do it with <a href="http://jquery.com/">jQuery</a> or <a href="https://code.google.com/p/domready/">domready</a>)</li>
-<li>CookiesPlease needs to be initialized <strong>BEFORE any other javascript</strong> (to avoid cookies to be created)</li>
+<li>CookiesPleaseJS needs to be initialized <strong>AFTER the DOM is ready</strong> (you can easily do it with <a href="http://jquery.com/">jQuery</a> or <a href="https://code.google.com/p/domready/">domready</a>)</li>
+<li>CookiesPleaseJS needs to be initialized <strong>BEFORE any other javascript</strong> (to avoid cookies to be created)</li>
 </ul>
 
 <p>Here's a common example using jQuery:</p>
@@ -70,7 +70,7 @@ You then can check if cookies are allowed :</p>
 </code></pre>
 
 <h2>
-<a id="options" class="anchor" href="#options" aria-hidden="true"><span class="octicon octicon-link"></span></a>Options</h2>
+<a id="options" class="anchor" href="#options" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Options</h2>
 
 <table>
 <thead>
@@ -126,16 +126,16 @@ You then can check if cookies are allowed :</p>
 </table>
 
 <h2>
-<a id="what-about-the-css-" class="anchor" href="#what-about-the-css-" aria-hidden="true"><span class="octicon octicon-link"></span></a>What about the CSS ?</h2>
+<a id="what-about-the-css-" class="anchor" href="#what-about-the-css-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What about the CSS ?</h2>
 
-<p>CookiesPlease has it's own default CSS, but you can easily customize it. Everything is wrapped in the following element :</p>
+<p>CookiesPleaseJS has it's own default CSS, but you can easily customize it. Everything is wrapped in the following element :</p>
 
 <pre><code>&lt;div id="cookiesplease" class="cookiesplease"&gt;
     ...
 &lt;/div&gt;
 </code></pre>
 
-<p>CookiesPlease's default CSS use the <code>.cookiesplease</code> class, to allow you to use <code>#cookiesplease</code> id (then avoiding any conflict) :</p>
+<p>CookiesPleaseJS' default CSS use the <code>.cookiesplease</code> class, to allow you to use <code>#cookiesplease</code> id (then avoiding any conflict) :</p>
 
 
 
@@ -156,7 +156,7 @@ body.cookiesplease-shown {}
 <p>Please note that the <code>.cookiesplease-shown</code> is added to the <code>&lt;body&gt;</code> element, until the user click on any button. This allows you to customize external elements, for pushing down the body for example.</p>
 
 <h2>
-<a id="legals" class="anchor" href="#legals" aria-hidden="true"><span class="octicon octicon-link"></span></a>Legals</h2>
+<a id="legals" class="anchor" href="#legals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Legals</h2>
 
 <ul>
 <li>Author : <a href="https://github.com/zessx">zessx</a>
@@ -169,7 +169,7 @@ body.cookiesplease-shown {}
 </ul>
 
 <h2>
-<a id="donations" class="anchor" href="#donations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Donations</h2>
+<a id="donations" class="anchor" href="#donations" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Donations</h2>
 
 <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=KTYWBM9HJMMSE&amp;lc=FR&amp;item_name=Buy%20a%20coffee%20to%20zessx%20%28Samuel%20Marchal%29&amp;currency_code=EUR&amp;bn=PP%2dDonationsBF%3abmac%3aNonHosted"><img src="http://doc.smarchal.com/bmac" alt="Buy me a coffee !"></a></p>
 
@@ -194,4 +194,3 @@ body.cookiesplease-shown {}
 
   </body>
 </html>
-
