--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ document.addEventListener('CookiesPleaseDeclined', function() {});
 <p>Here's a common example, defering Google Analytics' loading while user hasn't accepted cookies:</p>
 
 <pre><code>&lt;head&gt;
-    &lt;script src="vendor/cookiesplease/cookiesplease.min.js"&gt;
+    &lt;script src="vendor/cookiesplease/cookiesplease.min.js"&gt;&lt;/script&gt;
     &lt;script&gt;
         function loadGoogleAnalytics() {
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
